base/kubevirt-manager/kubevirtManagerArgoApp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KUBEVIRT_MANAGER_NAMESPACE}
  labels:
    initial-deploy-with-kubectl: "true"
