base/kubevirt-manager/kubevirtManagerCertificateAndIngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kubevirt-manager-ui-auth
  namespace: ${KUBEVIRT_MANAGER_NAMESPACE}
spec:
  basicAuth:
    secret: kubevirt-manager-ui-auth-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager-ui
  namespace: ${KUBEVIRT_MANAGER_NAMESPACE}
  annotations:
    advertise-via-dns: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ${KUBEVIRT_MANAGER_NAMESPACE}-kubevirt-manager-ui-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: kubevirt-manager.${CLUSTER_EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubevirt-manager
                port:
                  number: 8080
  tls:
    - hosts:
        - kubevirt-manager.${CLUSTER_EXTERNAL_DOMAIN}
      secretName: kubevirt-manager-ui-tls-cert
